--- a/index.css
+++ b/index.css
@@ -55,6 +55,7 @@ button:hover {
     justify-content: center;
 }
 .bloc {
+    text-align: center;
     background-color: #283618;
     line-height: 200%;
     width: 50%;
@@ -111,6 +112,15 @@ button:hover {
         margin-right: 0px;
         width: 60%;
     }
+}
+
+.bloc > canvas {
+    width: 500px;
+    height: 500px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 10px solid #965823;
+    box-shadow: 5px 3px 12px 5px rgba(0, 0, 0, 0.3);
 }
 
 .copyright {
