--- a/menu.css
+++ b/menu.css
@@ -1,3 +1,6 @@
+.root {
+    --darkmode-icon: url(darkmode_white.svg);
+}
 .menu {
     position: absolute;
     left: 0;
@@ -69,7 +72,7 @@
 
 .nav-button > img {
     margin-right: 5px;
-    content: url(darkmode_white.svg);
+    content: var(--darkmode-icon);
 }
 .nav-button:hover > img {
     content: url(darkmode_black.svg);
